# llama-buddy

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
crates/dir-extra/: Cargo.toml  lib.rs  linux.rs  macos.rs  windows.rs
crates/http-extra/: Cargo.toml  client.rs  download.rs  error.rs  lib.rs  sha256.rs
crates/http-extra/retry/: mod.rs
crates/http-extra/retry/strategy/: exponential_backoff.rs  fibonacci_backoff.rs  fixed_interval.rs  mod.rs
crates/llama-buddy-macro/: Cargo.toml  lib.rs
crates/llama-buddy-macro/tests/: test_index_by_field.rs
crates/llama-cpp/: Cargo.toml
crates/llama-cpp-sys/: Cargo.toml  build.rs  lib.rs
crates/llama-cpp-sys/llama/: mod.rs
crates/llama-cpp/examples/: simple.rs  simple_chat.rs
crates/llama-cpp/src/: backend.rs  batch.rs  error.rs  ggml_numa.rs  lib.rs  runtime.rs  utils.rs  vocabulary.rs
crates/llama-cpp/src/context/: cache.rs  context.rs  mod.rs  params.rs  perf.rs
crates/llama-cpp/src/error/: batch.rs  cache.rs  chat.rs  context.rs  lora.rs  mod.rs  model.rs  runtime.rs  token.rs  vocabulary.rs
crates/llama-cpp/src/model/: chat.rs  lora.rs  mod.rs  model.rs  params.rs
crates/llama-cpp/src/sampler/: mod.rs
crates/llama-cpp/src/token/: data.rs  logit_bias.rs  mod.rs  token.rs
crates/scalar-warpper/: Cargo.toml  build.rs  lib.rs  package.json  pnpm-lock.yaml
crates/scalar-warpper/examples/: todo.rs
crates/scalar-warpper/static/: scalar-api-reference.js
crates/sys-extra/: Cargo.toml  lib.rs
crates/sys-extra/dir/: linux.rs  macos.rs  mod.rs  windows.rs
examples/: async_down_and_retry.rs
src/: error.rs  init.rs  main.rs  pull.rs
src/cmd/: config.rs  init.rs  mod.rs  pull.rs  simple_run.rs  update.rs
src/config/: llama-buddy.toml  mod.rs
src/db/: config.rs  llama_buddy.rs  llama_buddy_schema.sql  mod.rs  model.rs  rustyline_history.rs  rustyline_history_schema.sql  schema.sql
src/error/: config.rs
src/init/: config.rs  mod.rs  model.rs  sqlite_plugin_simple.rs
src/service/: init.rs  mod.rs  model.rs
src/utils/: rustyline.rs
