[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5.51", features = ["derive", "wrap_help"] }
llama-buddy-macro = { path = "crates/llama-buddy-macro" }
http-extra = { path = "crates/http-extra" }
reqwest = { version = "0.13.2", default-features = false, features = ["default-tls", "charset", "http2", "system-proxy", "cookies", "hickory-dns"] }
rusqlite = { version = "0.38.0", default-features = true, features = ["bundled"] }
rustyline = { git = "https://github.com/kkawakam/rustyline.git", default-features = false, features = ["derive", "custom-bindings", "with-dirs"] }
sys-extra = { path = "crates/sys-extra", default-features = false }
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.145", default-features = false }
snafu = "0.8.9"
tempfile = "3.23.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tokio = "1"

[package]
name = "llama-buddy"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
http-extra = { workspace = true }
llama-buddy-macro = { workspace = true }
llama-cpp = { path = "crates/llama-cpp" }
reqwest = { workspace = true }
rusqlite = { workspace = true, features = ["chrono", "uuid"] }
rustyline = { workspace = true, features = ["with-sqlite-history", "with-fuzzy"] }
sqlite-jieba-tokenizer = "0.5.0"
scraper = "0.25.0"
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
sys-extra = { workspace = true, features = ["dir", "target"] }
tempfile = { workspace = true }
tokio = { workspace = true }
toml_edit = { version = "0.23.7", features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { version = "2.5.7", default-features = false, features = ["serde"] }
uuid = { version = "1.18.1", features = ["v7"] }
