[package]
name = "http-extra"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies]
base64ct = { version = "1.7.3", features = ["alloc"] }
form_urlencoded = "1.2.1"
faster-hex = "0.10.0"
memmap2 = "0.9.5"
rand = "0.9.0"
reqwest = { workspace = true }
sys-extra = { workspace = true, features = ["dir"] }
sha2 = "0.11.0-pre.5"
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tempfile = { workspace = true }

