[package]
name = "http-extra"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies]
base64ct = { version = "1.8.0", features = ["alloc"] }
form_urlencoded = "1.2.2"
faster-hex = "0.10.0"
memmap2 = "0.9.9"
rand = "0.9.2"
reqwest = { workspace = true }
sys-extra = { workspace = true, features = ["dir"] }
sha2 = "0.11.0-rc.2"
snafu = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

