[package]
name = "llama-cpp-sys"
version.workspace = true
description = "This is a binding to the C-style interface of llama.cpp, generated with the help of the bindgen tool."
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "llama_cpp_sys"
path = "lib.rs"

[build-dependencies]
anyhow = { workspace = true }
bindgen = "0.72.0"
cmake = "0.1.54"
find_cuda_helper = "0.2.0"
glob = "0.3.3"
sys-extra = { workspace = true, features = ["target"] }
walkdir = "2.5.0"

[features]
cuda = []
cuda-no-vmm = ["cuda"]
vulkan = []
openmp = []
# Only has an impact on Android.
android-shared-stdcxx = []
