[package]
name = "llama-cpp"
version.workspace = true
description = "Rust binding for llama.cpp"
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "llama_cpp"
path = "src/lib.rs"

[dependencies]
enumflags2 = "0.7"
llama-cpp-sys = { path = "../llama-cpp-sys" }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
llama-cpp = { path = "." }
rustyline = { workspace = true }
