[package]
name = "scalar-warpper"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "scalar_warrper"
path = "lib.rs"

[dependencies]
axum = "0.8"
http = "1"
maud = { version = "0.27", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = { version = "5.4.0", features = ["axum_extras"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
utoipa-axum = { version = "0.2.0" }

[build-dependencies]
serde_json = "1"
