[package]
name = "sys-extra"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies]
thiserror = { workspace = true }
target-triple = "0.1.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.0", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_System_Com", "Win32_Globalization"] }

[features]
default = []
dir = []
target = []